Update web scraper with improved UI, settings management, and gitignore configurations

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,51 @@ venv/
 *.pyc
 __pycache__/
 .DS_Store
+.vscode/
+
+# Python
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# IDE
+.idea/
+*.swp
+*.swo
+
+# Environment
+.env
+.venv
+env/
+ENV/
+
+# Logs and databases
+*.log
+*.sqlite3
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.pytest_cache/
