--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,67 @@
-altair==4.2.2
+altair==5.2.0
 attrs==24.2.0
 beautifulsoup4==4.13.3
 blinker==1.8.2
-cachetools==5.5.0
-certifi==2024.8.30
+cachetools==5.3.3
+certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
-distlib==0.3.6
+distlib==0.3.8
 entrypoints==0.4
-exceptiongroup==1.2.2
-filelock==3.8.0
+exceptiongroup==1.2.0
+filelock==3.13.1
 gitdb==4.0.11
-GitPython==3.1.43
+GitPython==3.1.42
 h11==0.14.0
-idna==3.10
-importlib_metadata==8.5.0
-Jinja2==3.1.4
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
+idna==3.6
+importlib_metadata==8.1.0
+Jinja2==3.1.3
+jsonschema==4.21.1
+jsonschema-specifications==2024.1.1
 markdown-it-py==3.0.0
-MarkupSafe==3.0.1
+MarkupSafe==2.1.5
 mdurl==0.1.2
 narwhals==1.9.1
-numpy==2.0.2
+numpy==1.26.4
 outcome==1.3.0.post0
-packaging==24.1
-pandas==2.2.3
-pillow==10.4.0
-platformdirs==2.5.2
-plotly==5.24.1
-protobuf==3.20.3
-pyarrow==17.0.0
-pydeck==0.9.1
-Pygments==2.18.0
-Pympler==1.1
+packaging==24.0
+pandas==2.2.1
+pillow==10.2.0
+platformdirs==4.2.0
+plotly==5.19.0
+protobuf==4.25.3
+pyarrow==15.0.0
+pydeck==0.8.1b0
+Pygments==2.17.2
+Pympler==1.0.1
 PySocks==1.7.1
-python-dateutil==2.9.0.post0
+python-dateutil==2.8.2
 python-dotenv==1.0.1
-pytz==2024.2
-referencing==0.35.1
-requests==2.32.3
-rich==13.9.2
-rpds-py==0.20.0
-selenium==4.28.1
+pytz==2024.1
+referencing==0.33.0
+requests==2.31.0
+rich==13.7.0
+rpds-py==0.18.0
+selenium==4.18.1
 semver==3.0.2
 six==1.16.0
 smmap==5.0.1
-sniffio==1.3.1
+sniffio==1.3.0
 sortedcontainers==2.4.0
-soupsieve==2.6
-streamlit==1.12.0
-tenacity==9.0.0
+soupsieve==2.5
+streamlit==1.31.1
+tenacity==8.2.3
 toml==0.10.2
-toolz==1.0.0
-tornado==6.4.1
-trio==0.29.0
-trio-websocket==0.12.1
-typing_extensions==4.12.2
-tzdata==2024.2
+toolz==0.12.1
+tornado==6.4.0
+trio==0.24.0
+trio-websocket==0.11.1
+typing_extensions==4.9.0
+tzdata==2024.1
 tzlocal==5.2
-urllib3==2.2.3
-validators==0.34.0
-webdriver-manager==4.0.2
-websocket-client==1.8.0
+urllib3==2.2.1
+validators==0.22.0
+webdriver-manager==4.0.1
+websocket-client==1.7.0
 wsproto==1.2.0
-zipp==3.20.2
+zipp==3.17.0
